kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elvis-backend-deployment
  labels:
    app: elvis-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elvis-backend
  template:
    metadata:
      labels:
        app: elvis-backend
    spec:
      containers:
        - name: elvis-backend
          image: public.ecr.aws/dissco/elvis-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
